Improved layout of the sidebar.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
     <nav class="nav">
         <div class="logo-bar">
-            <img class="nav-icon" src="images/logo.png" />
-            <h1 class="logo">facebook</h1>
+            <img class="nav-icon" src="images/icon.png" />
         </div>
         <div class="searchbox">
             <input type="text" placeholder="search">
@@ -26,35 +25,31 @@
     <main class="main">
         <div class="sidebar">
             <div class="favorites">
-                <h5>Favorites</h5>
-                <div class="news-feed">
-                    <a class="sidebar-icon" href="https://www.facebook.com/?sk=nf"><img class="sidebar-icon" src="images/home-feed.png"></a>
-                    <a class="sidebar-link" href="https://www.facebook.com/?sk=nf">News Feed</a>
+                <h5 class="label">Favorites</h5>
+                <div class="news-feed sidebar-container">
+                    <a class="sidebar-icon" href="https://www.facebook.com/?sk=nf"><img class="sidebar-icon" src="images/home-feed.png"></a><a class="sidebar-link" href="https://www.facebook.com/?sk=nf">News Feed</a>
                 </div>
-                <div class="messenger">
-                    <a class="sidebar-icon" href="https://www.facebook.com/messages/t/"><img class="sidebar-icon" src="images/messenger-blue.png"></a>
-                    <a class="sidebar-link" href="https://www.facebook.com/messages/t/">Messenger</a>
+                <div class="messenger sidebar-container">
+                    <a class="sidebar-icon" href="https://www.facebook.com/messages/t/"><img class="sidebar-icon" src="images/messenger-blue.png"></a><a class="sidebar-link" href="https://www.facebook.com/messages/t/">Messenger</a>
                 </div>
-                <div class="watch">
-                    <a class="sidebar-icon" href="https://www.facebook.com/watch/"><img class="sidebar-icon" src="images/watch.png"></a>
-                    <a class="sidebar-link" href="https://www.facebook.com/watch/">Watch</a>
+                <div class="watch sidebar-container">
+                    <a class="sidebar-icon" href="https://www.facebook.com/watch/"><img class="sidebar-icon" src="images/watch.png"></a><a class="sidebar-link" href="https://www.facebook.com/watch/">Watch</a>
                 </div>
-                <div class="marketplace">
-                    <a class="sidebar-icon" href="https://www.facebook.com/marketplace/?ref=bookmark"><img class="sidebar-icon" src="images/marketplace.png"></a>
-                    <a class="sidebar-link" href="https://www.facebook.com/marketplace/?ref=bookmark">Marketplace</a>
+                <div class="marketplace sidebar-container">
+                    <a class="sidebar-icon" href="https://www.facebook.com/marketplace/?ref=bookmark"><img class="sidebar-icon" src="images/marketplace.png"></a><a class="sidebar-link" href="https://www.facebook.com/marketplace/?ref=bookmark">Marketplace</a>
                 </div>
             </div>
             <div class="explore">
-                <h5>Explore</h5>
-                <div class="events">
+                <h5 class="label">Explore</h5>
+                <div class="events sidebar-container">
                     <img class="sidebar-icon" src="images/events.png">
                     <a class="sidebar-link" href="https://www.facebook.com/events/">Events</a>
                 </div>
-                <div class="pages">
+                <div class="pages sidebar-container">
                     <img class="sidebar-icon" src="images/pages.png">
                     <a class="sidebar-link" href="https://www.facebook.com/pages/?category=liked&ref=bookmarks">Pages</a>
                 </div>
-                <div class="friend-list">
+                <div class="friend-list sidebar-container">
                     <img class="sidebar-icon" src="images/friends.png">
                     <a class="sidebar-link" href="https://www.facebook.com/bookmarks/lists/">Friend Lists</a>
                 </div>
